# learn-rust-api

./: Cargo.toml  docker-compose.yml
entity/: Cargo.toml
entity/src/: mod.rs  prelude.rs  reply.rs  thread.rs  user.rs
migration/src/: lib.rs  m20260617_161716_create_user_table.rs  m20260718_000001_create_threads_and_replies.rs
src/: main.rs
src/routes/: auth_routes.rs  home_routes.rs  mod.rs  thread_routes.rs  user_routes.rs
src/routes/handlers/: auth_handler.rs  home_handler.rs  mod.rs  reply_handler.rs  thread_handler.rs  user_handler.rs
src/routes/middlewares/: auth_middleware.rs
src/utils/: api_response.rs  app_state.rs  constants.rs  jwt.rs
static/: style.css
templates/: home.html  login.html  register.html  thread_detail.html  thread_list.html  threads.html
