[package]
name = "actix-web-tut"
version = "0.1.0"
edition = "2024"

[workspace]
members = [".", "migration", "entity"]

[dependencies]
actix-web = "4.13.0"
dotenv = "0.15.0"
env_logger = "0.11.10"
lazy_static = "1.5.0"
serde = "1.0.228"
serde_json = "1.0.150"
sea-orm = { version = "2.0.0-rc", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
migration = { path = "migration" }
entity = { path = "entity" }
